--- a/src/App.css
+++ b/src/App.css
@@ -289,3 +289,17 @@ body {
 	align-items: center;
 	justify-content: center;
 }
+.project-links {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+.project-links a {
+	text-decoration: none;
+	color: #8eaf97;
+	cursor: pointer;
+}
+.project-links a:hover {
+	color: white;
+}
